bug fixes & enhancements
- force-wrap on title and description fields
- truncate title & description fields on all requests list
- 300 max length on description & 100 max length on title
- fixed giantbomb broken image url bug (or attempted to fix)

--- a/public/assets/app/css/lfg.css
+++ b/public/assets/app/css/lfg.css
@@ -154,3 +154,11 @@ ul.ui-autocomplete .ui-menu-item:hover {
 #mainContainer{
     height:1000px !important;
 }
+
+.force-wrap { 
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word;      /* IE */
+}
